--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: simple_vcard_parser
-version: 0.1.0
-description: A simple vCard parser (Versions 2.1, 3.0, 4.0)
+version: 0.1.1
+description: A simple and easy to use parser to extract information from a standard vCard string. Major vCard properties from versions 2.1, 3.0, 4.0 are supported.
 repository: https://github.com/AmirElkess/simple_vcard_parser
 
 environment:
